Fixing code snips not showing specific font

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -2,8 +2,5 @@
 
 :root {
     --font-family: 'Anuphan', 'IBM Plex Sans', sans-serif;
-}
-
-code {
-    font-family: 'IBM Plex Mono', monospace;
+    --font-family-code: 'IBM Plex Mono', monospace;
 }
